# contree

./: .gitignore  PARALLELIZATION.md  TRAINING_TESTS.md  test_training.sh
.github/workflows/: pypi_release.yml
code/: CMakeLists.txt  benchmark.sh  benchmark_openmp4-5.csv  final_openmp_results.csv  kill.sh  main.cpp
code/Engine/include/: GPUBruteForceSolver.h
code/Engine/src/: GPUBruteForceSolver.cu  general_solver.cpp  parameter_definitions.cpp  specialized_solver.cpp
code/Utilities/include/: configuration.h  statistics.h
code/Utilities/src/: statistics.cpp
code/benchmarks/: README.md  benchmark_full.csv  benchmark_main.cpp  run_full_benchmark.sh  validate_trees.py
code/benchmarks/comparisons/: comparison_cachealigned_threads_vs_nowait_64threads.txt  comparison_cachealigned_threads_vs_nowait_threads.txt  comparison_nowait_threads_vs_nowait_64threads.txt
code/benchmarks/results/: nowait_64threads.json  nowait_threads.json  profile.json
code/scripts/: run_openmp_nohup.py
